# Exam-Project

./: .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  setup_notes.txt  todo.txt
.github/workflows/: diagram_webservice.yml
Documentation/images/: simple_diagram_representation.drawio
back/diagram_webservice/: .env.development  dockerfile  pyproject.toml  readme.md  requirements.txt  some_plot.html  todo.txt
back/diagram_webservice/diagram_webservice/: main.py
back/diagram_webservice/src/: main.py
back/diagram_webservice/src/connection/: redis_connection.py
back/diagram_webservice/src/logic/: basic.py  kaggle.py  mpld3_check.py  sdg.py  sdg_linear_regression.py
back/diagram_webservice/src/service/: __init__.py  abstract_instructions.py  instruction_routes.py  kaggle_instructions.py  sdg_instructions.py  utility_routes.py
back/diagram_webservice/src/service/instructions/: abstract_instructions.py  kaggle_instructions.py  model.py  param.py  sdg_instructions.py
back/diagram_webservice/src/utils/: aliases.py  file_handling.py  logging.py  misc.py
back/diagram_webservice/tests/: test_diagram_webservice.py
documentation/: nosql_format.txt
documentation/sphinx/: conf.py  index.rst  modules.rst
front/diagram_display/: .env.development  .env.production  README.md  notes.txt  package-lock.json  package.json
resources/: .note.txt.kate-swp  note.txt  other_links.txt
resources/datasets/: .~lock.SDGSUICIDE,SDG_SH_STA_SCIDEN.csv#  .~lock.suicide_rates_overview_1985_to_2016.csv#  SDGSUICIDE,SDG_SH_STA_SCIDEN.csv  (+6 more)
services/: dockerfile
(+114 files in other folders)
